--- a/src/index.css
+++ b/src/index.css
@@ -1,13 +1,23 @@
+:root {
+  --facebook-color: #1877f2;
+  --secondary-icon: #656768;
+  --primary-icon: #65676854;
+  --secondary-icon-light: #2fa0d81a;
+  --web-wash: #f0f2f5;
+  --wash: #e4e6eb;
+  --body-black: #1c1e21;
+}
+
 body {
   margin: 0;
-  font-family: -apple-system, BlinkMacSystemFont, 'Segoe UI', 'Roboto', 'Oxygen',
-    'Ubuntu', 'Cantarell', 'Fira Sans', 'Droid Sans', 'Helvetica Neue',
+  font-family: -apple-system, BlinkMacSystemFont, "Segoe UI", "Roboto", "Oxygen",
+    "Ubuntu", "Cantarell", "Fira Sans", "Droid Sans", "Helvetica Neue",
     sans-serif;
   -webkit-font-smoothing: antialiased;
   -moz-osx-font-smoothing: grayscale;
 }
 
 code {
-  font-family: source-code-pro, Menlo, Monaco, Consolas, 'Courier New',
+  font-family: source-code-pro, Menlo, Monaco, Consolas, "Courier New",
     monospace;
 }
